Card flipping and implementation.

--- a/frontend/src/components/Card/Card.css
+++ b/frontend/src/components/Card/Card.css
@@ -254,3 +254,11 @@
 .symbols div {
 	position: absolute;
 }
+
+.card {
+	transition: transform 0.3s;
+}
+
+.card:hover {
+	transform: scale(1.5);
+}
