--- a/frontend/src/components/Card/Card.scss
+++ b/frontend/src/components/Card/Card.scss
@@ -193,7 +193,7 @@
 
 .card-front,
 .card-back {
-	background-color: #dfdfdf;
+	background-color: white;
 	border: 1px white solid;
 	border-radius: 10px;
 	display: inline-block;
@@ -254,4 +254,5 @@
 
 .card:hover {
 	transform: scale(1.5);
+	z-index: 1000;
 }
