--- a/frontend/src/components/Card/Card.scss
+++ b/frontend/src/components/Card/Card.scss
@@ -1,186 +1,3 @@
-.card[number="2"] .symbols div:nth-child(1),
-.card[number="2"] .symbols div:nth-child(2),
-.card[number="3"] .symbols div:nth-child(1),
-.card[number="3"] .symbols div:nth-child(2),
-.card[number="3"] .symbols div:nth-child(3) {
-	left: 50%;
-}
-
-.card[number="2"] .symbols div:nth-child(1),
-.card[number="3"] .symbols div:nth-child(1),
-.card[number="4"] .symbols div:nth-child(1),
-.card[number="4"] .symbols div:nth-child(2),
-.card[number="5"] .symbols div:nth-child(1),
-.card[number="5"] .symbols div:nth-child(2),
-.card[number="6"] .symbols div:nth-child(1),
-.card[number="6"] .symbols div:nth-child(2),
-.card[number="7"] .symbols div:nth-child(1),
-.card[number="7"] .symbols div:nth-child(2),
-.card[number="8"] .symbols div:nth-child(1),
-.card[number="8"] .symbols div:nth-child(2),
-.card[number="9"] .symbols div:nth-child(1),
-.card[number="9"] .symbols div:nth-child(2),
-.card[number="10"] .symbols div:nth-child(1),
-.card[number="10"] .symbols div:nth-child(2) {
-	top: 20px;
-	transform: scale(2);
-}
-
-.card[number="2"] .symbols div:nth-child(2),
-.card[number="3"] .symbols div:nth-child(3),
-.card[number="4"] .symbols div:nth-child(3),
-.card[number="4"] .symbols div:nth-child(4),
-.card[number="5"] .symbols div:nth-child(3),
-.card[number="5"] .symbols div:nth-child(4),
-.card[number="6"] .symbols div:nth-child(3),
-.card[number="6"] .symbols div:nth-child(4),
-.card[number="7"] .symbols div:nth-child(3),
-.card[number="7"] .symbols div:nth-child(4),
-.card[number="8"] .symbols div:nth-child(3),
-.card[number="8"] .symbols div:nth-child(4),
-.card[number="9"] .symbols div:nth-child(3),
-.card[number="9"] .symbols div:nth-child(4),
-.card[number="10"] .symbols div:nth-child(3),
-.card[number="10"] .symbols div:nth-child(4) {
-	bottom: 20px;
-	transform: rotate(0.5turn) scale(2);
-}
-
-.card[number="4"] .symbols div:nth-child(1),
-.card[number="4"] .symbols div:nth-child(3),
-.card[number="5"] .symbols div:nth-child(1),
-.card[number="5"] .symbols div:nth-child(3),
-.card[number="6"] .symbols div:nth-child(1),
-.card[number="6"] .symbols div:nth-child(3),
-.card[number="6"] .symbols div:nth-child(5),
-.card[number="7"] .symbols div:nth-child(1),
-.card[number="7"] .symbols div:nth-child(3),
-.card[number="7"] .symbols div:nth-child(5),
-.card[number="8"] .symbols div:nth-child(1),
-.card[number="8"] .symbols div:nth-child(3),
-.card[number="8"] .symbols div:nth-child(5),
-.card[number="9"] .symbols div:nth-child(1),
-.card[number="9"] .symbols div:nth-child(3),
-.card[number="9"] .symbols div:nth-child(5),
-.card[number="9"] .symbols div:nth-child(7),
-.card[number="10"] .symbols div:nth-child(1),
-.card[number="10"] .symbols div:nth-child(3),
-.card[number="10"] .symbols div:nth-child(5),
-.card[number="10"] .symbols div:nth-child(7) {
-	left: 20px;
-}
-.card[number="4"] .symbols div:nth-child(2),
-.card[number="4"] .symbols div:nth-child(4),
-.card[number="5"] .symbols div:nth-child(2),
-.card[number="5"] .symbols div:nth-child(4),
-.card[number="6"] .symbols div:nth-child(2),
-.card[number="6"] .symbols div:nth-child(4),
-.card[number="6"] .symbols div:nth-child(6),
-.card[number="7"] .symbols div:nth-child(2),
-.card[number="7"] .symbols div:nth-child(4),
-.card[number="7"] .symbols div:nth-child(6),
-.card[number="8"] .symbols div:nth-child(2),
-.card[number="8"] .symbols div:nth-child(4),
-.card[number="8"] .symbols div:nth-child(6),
-.card[number="9"] .symbols div:nth-child(2),
-.card[number="9"] .symbols div:nth-child(4),
-.card[number="9"] .symbols div:nth-child(6),
-.card[number="9"] .symbols div:nth-child(8),
-.card[number="10"] .symbols div:nth-child(2),
-.card[number="10"] .symbols div:nth-child(4),
-.card[number="10"] .symbols div:nth-child(6),
-.card[number="10"] .symbols div:nth-child(8) {
-	right: 20px;
-}
-
-.card[number="3"] .symbols div:nth-child(2),
-.card[number="6"] .symbols div:nth-child(5),
-.card[number="6"] .symbols div:nth-child(6),
-.card[number="7"] .symbols div:nth-child(5),
-.card[number="7"] .symbols div:nth-child(6),
-.card[number="8"] .symbols div:nth-child(5),
-.card[number="8"] .symbols div:nth-child(6) {
-	top: 50%;
-	transform: translateY(-50%) scale(2);
-}
-
-.card[number="3"] .symbols div:nth-child(2) {
-	transform: rotate(0.5turn) scale(2);
-}
-
-.card[number="5"] .symbols div:nth-child(5),
-.card[number="9"] .symbols div:nth-child(9),
-.card[number="10"] .symbols div:nth-child(9) {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) scale(2);
-}
-
-.card[number="7"] .symbols div:nth-child(7),
-.card[number="8"] .symbols div:nth-child(7),
-.card[number="10"] .symbols div:nth-child(9) {
-	transform: translate(-50%, -50%) rotate(0.5turn) scale(2);
-	bottom: 25px;
-	left: 50%;
-}
-
-.card[number="8"] .symbols div:nth-child(8),
-.card[number="10"] .symbols div:nth-child(10) {
-	transform: translate(-50%, -50%) scale(2);
-	top: 40px;
-	left: 50%;
-}
-
-.card[number="9"] .symbols div:nth-child(5),
-.card[number="9"] .symbols div:nth-child(8),
-.card[number="10"] .symbols div:nth-child(5),
-.card[number="10"] .symbols div:nth-child(8) {
-	transform: scale(2);
-	top: 50px;
-}
-
-.card[number="9"] .symbols div:nth-child(6),
-.card[number="9"] .symbols div:nth-child(7),
-.card[number="10"] .symbols div:nth-child(6),
-.card[number="10"] .symbols div:nth-child(7) {
-	transform: scale(2) rotate(0.5turn);
-	top: 80px;
-}
-
-.card[number="A"] .symbols div:nth-child(1) {
-	transform: translate(-50%, -50%) scale(6);
-	left: 50%;
-	top: 50%;
-}
-
-.card[number="J"] .card-front {
-	background-position-x: -12px;
-}
-
-.card[number="Q"] .card-front {
-	background-position-x: -128px;
-}
-
-.card[number="K"] .card-front {
-	background-position-x: -240px;
-}
-
-.card-♠ .card-front {
-	background-position-y: -12px;
-}
-
-.card-♣ .card-front {
-	background-position-y: 168px;
-}
-
-.card-♦ .card-front {
-	background-position-y: 330px;
-}
-
-.card-♥ .card-front {
-	background-position-y: 500px;
-}
-
 .card {
 	margin: 5px;
 	width: 100px;
@@ -189,6 +6,10 @@
 	position: relative;
 	color: black;
 	cursor: pointer;
+}
+
+.deck .card {
+	margin-left: -55px;
 }
 
 .card-front,
@@ -206,6 +27,7 @@
 
 .card-front {
 	transform: rotateY(0turn);
+	z-index: 1;
 }
 
 .card-back {
@@ -221,10 +43,6 @@
 	transform: rotateY(0.5turn);
 }
 
-.card-♦,
-.card-♥ {
-	color: red;
-}
 .card-corner {
 	margin: 5px;
 	font-family: monospace;
