--- a/frontend/src/components/Deck/Deck.scss
+++ b/frontend/src/components/Deck/Deck.scss
@@ -1,7 +1,7 @@
 .deck,
 .hand {
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	width: 75%;
 	margin: auto;
 	flex-wrap: wrap;
